--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 h1,h2,h3,h4,h5,h6, span{
@@ -22,6 +27,34 @@ p{
     font-size: 16px;
 }
 
+a{
+    text-decoration: none;
+    position:relative;
+    transition: opacity 300ms ease;
+}
+i:hover{
+    opacity: 0.7;
+
+}
+.link__hover-effect:after{
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 0;
+    bottom: -3px;
+    right: 0;
+    transition: all 300ms ease;
+}
+.link__hover-effect:hover:after{
+    width: 100%;
+    left: 0;
+}
+.link__hover-effect--white:after{
+    background-color: #fff;
+}
+.link__hover-effect--black:after{
+ background-color: #000;
+}
 li{
     list-style: none;
 }
@@ -38,6 +71,7 @@ li{
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    padding: 0 12px;
 }
 
 .text--purple{
@@ -61,6 +95,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 12px;
 }
 
 .nav__link--list{
@@ -71,7 +106,6 @@ nav{
     margin: 0 12px;
     color:#242424;
     font-weight: 700;
-    text-decoration: none;
 }
 .nav__link--anchor-primary{
     background-color: #63B4FF;
@@ -118,9 +152,22 @@ nav{
     border: solid 2px #ffffff;
     overflow: hidden;
     box-shadow: 0px 8px 8px #0062be9d ;
-    margin-bottom: 28px;
-    
+    margin-bottom: 28px;    
+    animation: animate-profile-picture 800ms 200ms backwards;
 }
+
+@keyframes animate-profile-picture {
+    0%{
+        transform:scale(0);
+    }
+    80%{
+        transform: scale(1.1);
+    }
+    100{
+        transform: scale(1);
+    }
+}
+
 
 .about-me__picture{
     width: 100%;
@@ -132,20 +179,37 @@ nav{
 }
 .about-me__info--title{
     margin-bottom: 16px;
-    filter: drop-shadow(-3px 2px 1px #00000011)
+    filter: drop-shadow(-3px 2px 1px #00000011);
+    animation: fade-up 650ms 400ms backwards;
 }
 .about-me__info--para{
     font-size: 20px;
     margin-bottom:28px;   
-    filter: drop-shadow(-2px 1px 1px #00000011)
-    
+    filter: drop-shadow(-2px 1px 1px #00000011);
+    animation: fade-up 650ms 600ms backwards;
 }
 .about-me__link{
     font-size: 20px;
-    text-decoration: none;
     color: #242424;
     padding: 0 16px;
+    animation: fade-up 650ms 800ms backwards;
 }
+
+.about-me__links {
+    animation: fade-up 650ms 800ms backwards;
+}
+
+@keyframes fade-up {
+    0%{
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .about-me__img--container{
     flex: 1;
     display: flex;
@@ -156,6 +220,31 @@ nav{
 .about-me__img{
     width: 100%;
     transform: scale(.80);
+    animation: fade-in 1200ms 800ms backwards;
+}
+
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+.wave{
+    display: inline-block;
+    animation: animate-wave 500ms infinite;
+}
+@keyframes animate-wave{
+    0% {
+        transform: rotate(0);
+    }
+    50%{
+        transform: rotate(30deg);
+    }
+    100%{
+        transform:rotate(0)
+    }
 }
 
 /*TECH STACK*/
@@ -186,6 +275,7 @@ nav{
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .language__name{
     position: absolute;
@@ -269,7 +359,6 @@ nav{
 .project__description--link{
     font-size: 20px;
     margin-right: 16px;
-    text-decoration: none;
 }
 
 .project__description--title, .project__description--sub-title,
@@ -277,13 +366,105 @@ nav{
     text-align: left;
     color: #fff;
 }
+/*FOOTER*/
 footer{
     background-color: #242424;
+}
+.footer__logo{
+}
+.footer__social--list{
+    width: 100%;
+    max-width: 500px;
     display: flex;
+    justify-content: space-around;
+    margin-bottom: 28px;
+}
+.footer__row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    padding: 8% 0;
     
 }
 .footer__logo--img{
     filter: invert(1);
     height: 70px;
+    width: 70px;
+}
+
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper {
+  color: #fff;
+}
+.footer__logo--popper{
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;
+    opacity: 0;
+    transition: all 300ms ease;
+}
+  
+.footer__anchor{
+    margin-bottom: 20px;
+    position: relative;
+
+}
+.footer__anchor:hover .footer__logo--popper{
+    transform: translateX(60px);
+    opacity: 1;
+}
+/*SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+@media (max-width:768px) {
+    nav{
+        height:68px;
+    }
+    h1{
+        font-size: 28px;
+    }
+    .about-me__info--para{
+        font-size: 18px;
+    }
+
+    .language{
+        width: calc(100% / 3);
+    }
+    
+    .project__description--para{
+        font-size: 14px;
+    }
+    .project__description{
+        padding-right: 30px;
+        left: 30px;
+    }
+}
+
+@media (max-width:480px){
+    .nav__link:not(:last-child){
+        display: none;
+    }
+    .project__description{
+        padding: 0;
+        left: 0;
+        width: 100%;
+    }
+    .project__description--para{
+        display: none;
+    }
+    .project__description--links{
+        display: flex;
+        justify-content: center;
+    }
+
+    .project__description--title{
+        font-size: 32px;
+        line-height: 1;
+        text-align: center;
+    }
+    .project__description--sub-title{
+        text-align: center;
+        margin: 12px 0;
+    }
 }
