--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,9 @@ nav{
 
 .language__img{
     width: 100%;
+    height: 100%;
     max-width: 100px;
+    max-height: 100px;
     transition: all 300ms;
 }
 .language:hover .language__img{
@@ -370,8 +372,6 @@ nav{
 footer{
     background-color: #242424;
 }
-.footer__logo{
-}
 .footer__social--list{
     width: 100%;
     max-width: 500px;
@@ -384,7 +384,7 @@ footer{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 8% 0;
+    padding: 3% 0;
     
 }
 .footer__logo--img{
